fix: make search clickable when aligned right

--- a/packages/tableberg/src/style.scss
+++ b/packages/tableberg/src/style.scss
@@ -362,7 +362,7 @@ div.wp-block-tableberg-wrapper {
         }
 
         &.tableberg-search-right {
-            float: right;
+            margin-left: auto;
         }
 
         &.tableberg-search-center {
